# advent-of-code

./: README.md
2022/01/: README.md  app.py  tests.py
2022/01.1/: app.py  counter.py  parser.py  tests.py
2022/02/: .gitignore  README.md  main.go  main_test.go
2022/03/: README.md  app.js  app.test.js  index.js  package-lock.json  package.json  rucksack.js  rucksack.test.js
2022/04/: Cargo.toml  README.md
2022/04/src/: lib.rs  main.rs
2022/04/tests/: integration_test.rs
2022/05/: README.md  main.py  tests.py
2022/06/: README.md  index.js  package-lock.json  package.json  packets.js  packets.test.js
2022/07/: README.md  command_parser.rb  prompt_parser.rb  tests.rb  tree_builder.rb
2022/08/: README.md  app.py  tests.py
2022/09/: Cargo.toml  README.md
2022/09/src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs
2022/09/tests/: .integration_test.rs.swp  integration_test.rs
2022/10/: README.md  app.py  tests.py
2023/: CMakeLists.txt  aoclib2023-tests.cpp  aoclib2023.cpp  aoclib2023.h
2023/.devcontainer/: Dockerfile  devcontainer.json  install-google-tests.sh
2023/01/: CMakeLists.txt  README.md  main.cpp  new_test.cpp  number-finder-tests.cpp  number-finder.cpp  number-finder.h  replacer-tests.cpp  replacer.cpp  replacer.h
2023/02/: CMakeLists.txt  README.md  bag-tests.cpp  draw-tests.cpp  game-tests.cpp  main.cpp  models.cpp  models.h
2023/03/: CMakeLists.txt  README.md  boundary-calculator-tests.cpp  boundary-calculator.cpp  definitions.cpp  definitions.h  main.cpp  number-finder-tests.cpp  number-finder.cpp  number-validator-tests.cpp  number-validator.cpp
2023/04/: CMakeLists.txt  README.md  definitions.h  main.cpp  scratchcard-tests.cpp  scratchcard.cpp
2023/05/: CMakeLists.txt  README.md  definitions.h  main.cpp  map-range-tests.cpp  map-range.cpp  parsing-tests.cpp  parsing.cpp
2023/06/: CMakeLists.txt  README.md  definitions.h  main.cpp  models-tests.cpp  models.cpp
2023/07/: CMakeLists.txt  definitions.h  hand-tests.cpp  main.cpp  models.cpp
2023/08/: CMakeLists.txt  README.md  definitions.h  instructions-tests.cpp  main.cpp  models.cpp
2023/22.1/: CMakeLists.txt  counter.test.cpp
2024/: create  package-lock.json  package.json  run  tsconfig.json
2024/01/: README.md  index.ts
2024/src/: core.ts
2024/src/01/: index.ts  solution.test.ts  solution.ts  util.test.ts  util.ts
2024/src/02/: README.md  index.ts  solution.test.ts  solution.ts  util.test.ts  util.ts
2024/src/03/: README.md  index.ts  solution.test.ts  solution.ts  util.test.ts  util.ts
2024/src/04/: README.md  index.ts  solution.test.ts  solution.ts  util.test.ts  util.ts
2024/src/05/: index.ts  solution.test.ts  solution.ts  test-input.txt  util.test.ts  util.ts
2024/src/06/: README.md  index.ts  lib.test.ts  lib.ts  solution.test.ts  solution.ts
2024/src/07/: README.md  index.ts  lib.test.ts  lib.ts  solution.test.ts  solution.ts
2024/src/08/: README.md  index.ts  lib.test.ts  lib.ts  solution.test.ts  solution.ts
2024/src/09/: README.md  index.ts  lib.test.ts  lib.ts  solution.test.ts  solution.ts
2024/src/10/: README.md  index.ts  lib.test.ts  lib.ts  solution.test.ts  solution.ts
2024/src/11/: README.md  index.ts  lib.test.ts  lib.ts  solution.test.ts  solution.ts
